bk_ida/gobmkida/g0/play_aftermath
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/play_aftermath/src/engine/aftermath.c:1397:15: error: use of undeclared identifier 'current_color_1'
if ( color != current_color_1 ) 
              ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/play_aftermath/src/engine/aftermath.c:1399:1: error: use of undeclared identifier 'current_color_1'
current_color_1 = color; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/play_aftermath/src/engine/aftermath.c:1404:39: error: use of undeclared identifier 'current_board_0'
if ( board[pos] != 3 && board[pos] != current_board_0[pos] ) 
                                      ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/play_aftermath/src/engine/aftermath.c:1406:1: error: use of undeclared identifier 'current_board_0'
current_board_0[pos] = board[pos]; 
^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/play_aftermath/src/obj/1/aftermath.o] Error 1
